--- a/Lesson1/base/exercise1.html
+++ b/Lesson1/base/exercise1.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html> 
- <HTML> 
+ <HTML lang="en"> 
      <HEAD><META charset="utf-8">
     <TITLE>Python program,part 1_1</TITLE>
  </HEAD> 
@@ -8,10 +8,10 @@
     <li>Программа на Python — часть 1</li>
     <li>Программа на Python — часть 2</li>
     <li>Программа на Python — часть 3</li>
-    <ul>
+    
     <h2>Содержание</h2>
     <h3>HOW-TO: Программа на Python, Часть 1</h3>
-    </ul>
+    
     <li>Наша первая программа</li>
     <li>Пример цикла For</li>
     </ul>
