--- a/Lesson1/base/exercise2.html
+++ b/Lesson1/base/exercise2.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html> 
- <HTML> 
+ <HTML lang="en"> 
      <HEAD><META charset="utf-8">
     <TITLE>Python program,part 2</TITLE>
  </HEAD> 
@@ -8,14 +8,14 @@
     <li><I>Программа на Python — часть 1</I></li>
     <li><I>Программа на Python — часть 2</I></li>
     <li><I>Программа на Python — часть 3</I></li>
-    <ul>
+  
     <h2>Содержание</h2>
 <h3>HOW-TO: Программа на Python, Часть 2</h3>
-    </ul>
+   
     <li><U>Списки</U></li>
     <li><U>Комментарии</U></li>
     </ul>
-    <hr> </BODY></hr>
+    <hr> 
 <p>Впрошлом уроке мы рассмотрели простую программу, которая использовала raw_input 
 для получения ответа пользователя, простые типы переменных и простой цикл «for». В 
 этом уроке мы рассмотрим ещё больше типов переменных и напишем ещё больше 
@@ -27,10 +27,10 @@
 другом коробок с одинаковыми вещами. Например, в одной коробке лежат вилки, в 
 другой — ножи, в третьей — ложки. Посмотрим на простой список— список месяцев. Мы 
 запрограммируем его так:</p>
-<pre class="code">
+<code><pre>
 
 months = 
-['Jan','Feb','Mar','Apr','May','Jun','Jul','Aug','Sep','Oct','Nov','Dec']</pre>
+['Jan','Feb','Mar','Apr','May','Jun','Jul','Aug','Sep','Oct','Nov','Dec']</pre></code>
 
 
 <p>Чтобы создать список, мы заключили все значения в квадратные скобки<b>( '['</b> и <b>']' )</b>. Мы 
@@ -38,9 +38,8 @@ months =
 <b>months[0]</b> или<b> months[1] </b>(которые выведут на экран <var>'Jan' </var>или<var> 'Feb'</var>). Помните: счет 
 начинается с нуля. Чтобы найти длину списка, можно использовать такую функцию:</p>
 
-<pre class="code">
-
-print len(months)</pre>
+<code><pre>
+print len(months)</pre></code>
 
 <p>которая вернёт 12.</p>
 
@@ -52,7 +51,7 @@ print len(months)</pre>
 очень просто. Я уверен, вы сможете придумать много других примеров использования 
 списков. </p>
 
-<hr> </BODY></hr>
+
 <h2>Комментарии</h2>
 <p>Далее, мы должны обсудить комментарии. Комментарии важны по нескольким причинам. 
 Они не только говорят вам или другим людям, что вы пытаетесь делать, но и напомнят 
@@ -60,8 +59,8 @@ print len(months)</pre>
 комментарии станут важными. Также при их помощи вы заставите Python игнорировать 
 какие-либо части кода. Чтобы закомментировать строку, поставьте перед ней знак '#'.</p>
 <p>Например:</p>
-<br>#</br>
-<br>Это комментарий</br>
+<br>#
+<br>Это комментарий
 
 <p>Комментарии можно вставлять в любое место в строке, но помните, что Python проигнорирует всё, что идет после '#'.</p>
 </BODY>
