--- a/Lesson3/add/add/about/about.html
+++ b/Lesson3/add/add/about/about.html
@@ -5,20 +5,20 @@
  </HEAD> 
   <BODY>
       <h1>Горизонтальное меню</h1> 
-      <a href="index/index.html">Главная</a>&#124
+      <a href="../index/index.html">Главная</a>&#124
       <a href="../catalog/catalog.html">Каталог</a>&#124
       <a href="../promo/promo.html">Акции</a>&#124
       <a href="../about/about.html">О нас</a>&#124
       <h1>Меню список</h1>
       <ul>
-      <li><a href="index/index.html">Главная</a></li>
+      <li><a href="../index/index.html">Главная</a></li>
       <li><a href="../catalog/catalog.html">Каталог</a></li>
       <li><a href="../promo/promo.html">Акции</a></li>
       <li><a href="../about/about.html">О нас</a></li>
       </ul>
       <h1>Меню с вложенным списком</h1>
       <ul>
-       <li><a href="../add/index/index.html">Главная</a>
+       <li><a href="../index/index.html">Главная</a>
       <ul>
           <li><a href="../index/news.html">Новости</a></li>
     </ul>
@@ -34,7 +34,7 @@
       </li>
       </ul>
              <ul>
-          <li><a href="../add/promo/promo.html">Акции</a>
+          <li><a href="../promo/promo.html">Акции</a>
        <ul>
           <li><a href="../promo/action.html">Актуальные</a></li>
         
@@ -43,7 +43,7 @@
        </li>
              </ul>
           <ul>
-            <li><a href="../add/about/about.html">О нас</a>
+            <li><a href="../about/about.html">О нас</a>
               <ul>
           
             <li><a href="../about/contact.html">Контакты</a></li>
@@ -55,7 +55,7 @@
           <h1>Меню таблица с вложенными таблицами</h1>
 <table>
   <tr>
-    <td><a href="../add/index/index.html">Главная</a></td>
+    <td><a href="../index/index.html">Главная</a></td>
   </tr>
     <TD>
       <td>
@@ -82,7 +82,7 @@
       </td>
       </TD>
       <tr>
-        <td><a href="../add/promo/promo.html">Акции</a><td>
+        <td><a href="../promo/promo.html">Акции</a><td>
         </tr>
         <TD>
           <td>
@@ -97,7 +97,7 @@
             </td>
             </TD>
             <tr>
-              <td><a href="../add/about/about.html">О нас</a><td>
+              <td><a href="../about/about.html">О нас</a><td>
               </tr>
               <TD>
                 <td>
